# piper-speechd

./: .gitmodules  Cargo.toml
src/: io.rs  main.rs
