[package]
name = "piper-speechd"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
license-file = "LICENSE.txt"

[dependencies]
fork = "0.2.0"
libc = "0.2.172"
piper-rs = { path = "./piper-rs" }
rodio = { version = "0.20.1", default-features = false, features = ["wav"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_ssml = "0.4.0"
xdg = "3.0.0"
