[package]
name = "piper-speechd"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
license-file = "LICENSE.txt"

[dependencies]
anyhow = "1.0.98"
fern = { version = "0.7.1", features = ["colored"] }
fork = "0.2.0"
libc = "0.2.173"
log = "0.4.27"
log-reload = "0.1.3"
piper-rs = { git = "https://github.com/ashkitten/piper-rs" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_ssml = "0.4.0"
xdg = "3.0.0"
